# rag_chatbot_reranking

./: README.md  YOUTUBE_TRANSCRIPT_README.md  add_transcripts_to_rag.py  env.example  example_queries.py  index.html  load_data.py  main.py  requirements.txt  test_rag.py  vector_service.py  vercel.json  youtube_transcript_downloader.py
guardrails/: README.md  guardrails_ai.md  guardrails_hub_example.py  guardrails_system.py  openai_moderation.py  pyproject.toml  test_guardrails.py
langsmith_tracing/: .example.env  README.md  dataset.csv  test_evaluation.py  test_langsmith.py
multi-modal-researcher/: README.md  pyproject.toml
tests/: check_ffmpeg.py  test_audio_splitting.py  test_transcript_system.py
transcripts/: apache-iceberg-lecture-day-1-apr2025-1_Apache Iceberg Lecture Day 1 - Updated.json  azure-week-5-may2025_Azure - Week 5.json  book-club-1-july2025_Book Club 1.json  managing-unstructured-data-day-1-lab-may2025_Managing Unstructured Data - Day 1 Lab.json  managing-unstructured-data-day-1-lecture-may2025_Managing Unstructured Data - Day 1 Lecture.json  managing-unstructured-data-day-2-lab-may2025_Managing Unstructured Data - Day 2 Lab.json  managing-unstructured-data-day-2-lecture-may2025_Managing Unstructured Data - Day 2 Lecture.json  navigating-data-engineering-tips-tools-and-career-insights-may2025_Navigating Data Engineering -Tips, Tools, and Career Insights.json  prompt-engineering-day1-lab-jul2025_Day 1 Lab_ Auto Prompt Optimization with dspy.json  prompt-engineering-day1-lecture-jul2025_Day 1 Lecture_ Prompt Engineering Theory.json  (+18 more)
(+5 files in other folders)
